--- a/varalhub/static_my_proj/css/style.css
+++ b/varalhub/static_my_proj/css/style.css
@@ -2606,7 +2606,7 @@ img {
 
 /*---- Login form ----*/
 
-.aa-login-form input[type="text"],
+.aa-login-form input[type="text"],input[type="email"],
 .aa-login-form input[type="password"] {
   border: 1px solid #ccc;
   font-size: 16px;
