--- a/varalhub/templates/base/footersection.html
+++ b/varalhub/templates/base/footersection.html
@@ -104,16 +104,19 @@
         <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h4>Login or Register</h4>
-          <form class="aa-login-form" action="">
-            <label for="">Username or Email address<span>*</span></label>
-            <input type="text" placeholder="Username or email">
+          <form class="aa-login-form" id="loginFromModal">
+            {% csrf_token %}            
+
+            <label for="">Email address<span>*</span></label>
+            <input type="email" name="login_email" id="login_email" placeholder="Enter Email">
+
             <label for="">Password<span>*</span></label>
-            <input type="password" placeholder="Password">
+            <input type="password" name="login_pass" id="login_pass"  placeholder="Enter Password">
+
             <button class="aa-browse-btn" type="submit">Login</button>
-            <label for="rememberme" class="rememberme"><input type="checkbox" id="rememberme"> Remember me </label>
             <p class="aa-lost-password"><a href="#">Lost your password?</a></p>
             <div class="aa-register-now">
-              Don't have an account?<a href="account.html">Register now!</a>
+              Don't have an account?<a href="{% url 'home' %}">Register now!</a>
             </div>
           </form>
         </div>                        
