finalized code review

--- a/varalhub/accounts/templates/login.html
+++ b/varalhub/accounts/templates/login.html
@@ -72,6 +72,7 @@
             data : formData, 
             // handle a successful response
             success : function(data) {
+              console.log(data)
                 // remove the value from the input
                 $('#loginuser_form')[0].reset();  
 
